[package]
name = "ssssh"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version="0.2", features=["tcp", "time", "stream", "macros", "io-util"] }
tokio-util = { version="0.2", features=["codec"] }
futures = "0.3"
bytes = "0.5"
rand = "0.7"
openssl = "0.10"
failure = "0.1"
ring = "0.16"
log = "0.4"
async-trait = "0.1"

[dev-dependencies]
tokio = { version="0.2", features=["rt-threaded", "process"] }
env_logger = "0.6"
bencher = "0.1"

[[bench]]
name = "bench"
harness = false

#[workspace]
#members = [
#    "ssssh-msg"
#]
