[package]
name = "ssssh"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version="0.2", features=["tcp", "time", "stream", "macros", "io-util", "sync"] }
futures = "0.3"
bytes = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0"
ring = { version="0.16", features = ["std"] }
log = "0.4"
async-trait = "0.1"
getset = "0.1.0"
derive-new = "0.5.8"
derive_builder = "0.9.0"
linked-hash-map = "0.5.3"

[dev-dependencies]
tokio = { version="0.2", features=["rt-threaded", "process", "dns", "fs"] }
env_logger = "0.6"
anyhow = "1.0"
